--- a/obm/aua/lib/AuaRes_it.properties
+++ b/obm/aua/lib/AuaRes_it.properties
@@ -1,27 +1,27 @@
 GLOBAL.General.English=Inglese
 GLOBAL.General.French=Francese
-GLOBAL.General.TraditionalChinese=Cinese (Tradizionale)
-GLOBAL.General.SimplifiedChinese=Cinese (Semplificato)
-GLOBAL.General.Dutch=Olandese
+GLOBAL.General.TraditionalChinese=Cinese (tradizionale)
+GLOBAL.General.SimplifiedChinese=Cinese (semplificato)
+GLOBAL.General.Dutch=Tedeschi
 GLOBAL.General.Danish=Danese
 GLOBAL.General.German=Tedesco
 GLOBAL.General.Italian=Italiano
-GLOBAL.General.Spanish=Spagnolo
+GLOBAL.General.Spanish=Spagnola
 GLOBAL.General.Icelandic=Islandese
-GLOBAL.General.Romanian=Rumeno
+GLOBAL.General.Romanian=Romeno
 GLOBAL.General.Swedish=Svedese
 GLOBAL.General.Czech=Ceco
 GLOBAL.General.Norwegian=Norvegese
-GLOBAL.General.Japanese=Giapponese
+GLOBAL.General.Japanese=Japonese
 GLOBAL.General.Korean=Coreano
-GLOBAL.General.ThaiThaiDigits=Tailandese (cifre tailandesi)
-GLOBAL.General.ThaiWesternDigits=Tailandese (cifre occidentali)
+GLOBAL.General.ThaiThaiDigits=Thai (Thai digits)
+GLOBAL.General.ThaiWesternDigits=Thai (Western digits)
 GLOBAL.General.PortugueseBrazil=Portoghese (Brasile)
 GLOBAL.General.PortuguesePortugal=Portoghese (Portogallo)
-GLOBAL.General.GreekModern=Greco Moderno
+GLOBAL.General.GreekModern=GrecoModerno
 GLOBAL.General.Indonesian=Indonesiano
-GLOBAL.General.Malay=Malese
-GLOBAL.General.Vietnamese=Vietnamita
+GLOBAL.General.Malay=Malaysiano
+GLOBAL.General.Vietnamese=Vietnamese
 GLOBAL.General.Russian=Russo
 GLOBAL.General.Turkish=Turco
 GLOBAL.General.Ukrainian=Ucraino
@@ -32,10 +32,10 @@ GLOBAL.General.Slovenian=Sloveno
 GLOBAL.General.Finnish=Finlandese
 GLOBAL.General.Lithuanian=Lituano
 GLOBAL.General.Hungarian=Ungherese
-GLOBAL.General.Euskara=Basco
+GLOBAL.General.Euskara=Euskara
 GLOBAL.General.Polish=Polacco
 GLOBAL.General.Catalan=Catalano
-GLOBAL.General.LanguageName=Inglese
+GLOBAL.General.LanguageName=Italiano
 GLOBAL.General.Bulgarian=Bulgaro
 AUA_COMMON_OK=Ok
 AUA_COMMON_OPTIONS=Opzioni
