--- a/obm/bin/ObcCoreRes_ar.properties
+++ b/obm/bin/ObcCoreRes_ar.properties
@@ -94,7 +94,7 @@ BS_PROCESS_UPDATED_FILE_ERROR=[Error][Updated File] File="{0}" Error="{1}"
 BS_PROCESS_DELETED_FILE_ERROR=[Error][Deleted File] File="{0}" Error="{1}"
 BS_PROCESS_MOVED_FILE_ERROR=[Error][Moved File] File="{0}" Error="{1}"
 BS_EST_QUOTA_NEED=Estimate quota space required on server: {0}
-BS_QUOTA_EXCEEDED=\u062A\u0645 \u062A\u062C\u0627\u0648\u0632 \u0627\u0644\u062D\u0635\u0629. \u064A\u0631\u062C\u0649 \u0627\u0644\u0627\u062A\u0635\u0627\u0644 \u0628\u0646\u0627 \u0644\u0632\u064A\u0627\u062F\u0629 \u0627\u0644\u062D\u0635\u0629.
+BS_QUOTA_EXCEEDED=Quota Exceeded. Please contact us to increase your quota.
 BS_RETRY_SENDING_BLOCK=Retry sending block in {0} seconds
 BS_LOG_START_ERROR=Unable to log start to server. Error="{0}"
 BS_LOG_SERVER_ERROR=Unable to log to server. Error="{0}"
