--- a/obm/bin/ObcCoreRes_en.properties
+++ b/obm/bin/ObcCoreRes_en.properties
@@ -544,7 +544,7 @@ BS_EXTRA_LOCAL_PROCESS_DELETE_LINK_FILE_ERROR=[Error][Deleted Link File] File="{
 DECRYPT_FILE=Decrypting
 DECRYPTING=Decrypting ... "{0}" (Total {1} bytes)
 BS_SYSTEMSTATE_MODULE_NOT_FOUND=SystemState Backup module is either not started or not installed on this computer.
-BS_MSWIN_SYSTEM_BACKUP_MODULE_NOT_FOUND=Windows Server Backup is not installed on this computer. To install Windows Server Backup, click Start, click Server Manager, click Add Features, and then select Windows Server Backup. Follow the instructions in the Add Features Wizard.
+BS_MSWIN_SYSTEM_BACKUP_MODULE_NOT_FOUND=Windows Server Backup is not installed on this computer. To install Windows Server Backup, click Start, click Server Manager, click Add Features, and then select Windows Server Backup. Follow the instuctions in the Add Features Wizard.
 BS_SYSSTATE_BACKUP_OUTPUT=[System State Backup] {0}
 BS_SYSSTATE_GENERATE_BACKUPIMAGE_FAILED=Failed to generate the backup image of System State Backup
 BS_CLEAR_WIB_FAILED=Failed to clear "{0}".  Specifically, cannot delete "{1}".
