--- a/obm/bin/ObcCoreRes_hu.properties
+++ b/obm/bin/ObcCoreRes_hu.properties
@@ -94,7 +94,7 @@ BS_PROCESS_UPDATED_FILE_ERROR=[Hiba][M\u00F3dos\u00EDtott F\u00E1jl] F\u00E1jl="
 BS_PROCESS_DELETED_FILE_ERROR=[Hiba][T\u00F6r\u00F6lt F\u00E1jl] F\u00E1jl="{0}" Hiba="{1}"
 BS_PROCESS_MOVED_FILE_ERROR=[Hiba][\u00C1thelyett F\u00E1jl] F\u00E1jl="{0}" Hiba="{1}"
 BS_EST_QUOTA_NEED=A szerveren v\u00E1rhat\u00F3an {0} helyre lesz sz\u00FCks\u00E9g
-BS_QUOTA_EXCEEDED=Kv\u00F3ta t\u00FAll\u00E9p\u00E9s. A kv\u00F3ta megn\u00F6vel\u00E9s\u00E9vel kapcsolatban keressen minket.
+BS_QUOTA_EXCEEDED=A kv\u00F3ta betelt. K\u00E9rem l\u00E9pjen vel\u00FCnk kapcsolatba a kv\u00F3t\u00E1j\u00E1nak megemel\u00E9se \u00E9rdek\u00E9ben.
 BS_RETRY_SENDING_BLOCK=A blokk \u00FAjrak\u00FCld\u00E9se{0} m\u00E1sodperc m\u00FAlva
 BS_LOG_START_ERROR=Nem tudok napl\u00F3t \u00EDrni a szerverre. Hiba="{0}"
 BS_LOG_SERVER_ERROR=Nem tudok napl\u00F3t \u00EDrni a szerverre. Hiba="{0}"
