--- a/obm/bin/ObcCoreRes_ko.properties
+++ b/obm/bin/ObcCoreRes_ko.properties
@@ -94,7 +94,7 @@ BS_PROCESS_UPDATED_FILE_ERROR=[\uC5D0\uB7EC][\uC218\uC815\uB41C \uD30C\uC77C] \u
 BS_PROCESS_DELETED_FILE_ERROR=[\uC5D0\uB7EC][\uC0AD\uC81C\uB41C \uD30C\uC77C] \uD30C\uC77C="{0}" \uC5D0\uB7EC="{1}"
 BS_PROCESS_MOVED_FILE_ERROR=[\uC5D0\uB7EC][\uC774\uB3D9\uB41C \uD30C\uC77C] \uD30C\uC77C="{0}" \uC5D0\uB7EC="{1}"
 BS_EST_QUOTA_NEED=\uC11C\uBC84\uC5D0 \uD544\uC694\uD55C \uC6A9\uB7C9\uD06C\uAE30 \uC608\uC0C1: {0}
-BS_QUOTA_EXCEEDED=\uD560\uB2F9\uB7C9\uC774 \uCD08\uACFC\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uD560\uB2F9\uB7C9\uC744 \uB298\uB9AC\uB824\uBA74 \uB2F9\uC0AC\uC5D0 \uBB38\uC758\uD558\uC2ED\uC2DC\uC624.
+BS_QUOTA_EXCEEDED=\uC6A9\uB7C9\uC774 \uCD08\uACFC\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uC6A9\uB7C9\uC744 \uB298\uB9AC\uB824\uBA74 \uC11C\uBE44\uC2A4 \uC6B4\uC601\uC790\uC5D0\uAC8C \uC5F0\uB77D\uD558\uC2ED\uC2DC\uC624.
 BS_RETRY_SENDING_BLOCK={0}\uCD08 \uD6C4\uC5D0 \uBE14\uB85D \uC804\uC1A1 \uC7AC\uC2DC\uB3C4
 BS_LOG_START_ERROR=\uC11C\uBC84\uC5D0 \uB85C\uADF8\uAE30\uB85D\uC744 \uC2DC\uC791\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4. \uC5D0\uB7EC="{0}"
 BS_LOG_SERVER_ERROR=\uC11C\uBC84\uC5D0 \uB85C\uADF8\uB97C \uAE30\uB85D\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4. \uC5D0\uB7EC="{0}"
